@@ -17,6 +17,7 @@
 package org.apache.camel.component.language;
 
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 import org.apache.camel.ContextTestSupport;
 import org.apache.camel.Exchange;
@@ -44,11 +45,11 @@ public class LanguageScriptInHeaderRouteTakePrecedenceTest extends ContextTestSu
     }
 
     @Override
-    protected RouteBuilder createRouteBuilder() throws Exception {
+    protected RouteBuilder createRouteBuilder() {
         return new RouteBuilder() {
             @Override
-            public void configure() throws Exception {
-                String script = URLEncoder.encode("Bye ${body}", "UTF-8");
+            public void configure() {
+                String script = URLEncoder.encode("Bye ${body}", StandardCharsets.UTF_8);
                 from("direct:start").to("language:simple:" + script).to("mock:result");
             }
         };
